--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 				<div class="container">
 					<h3>Présentation</h3>
 					<p class="italic">
-						&nbsp; Passionné par le web, tout particulièrement par le développement de, aussi bien back-end que front-end.
+						&nbsp; Passionné par le web, tout particulièrement par le développement, aussi bien back-end que front-end.
 					</p>
 				</div>
 					</section>
